# low-level-SysGuard

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml  deploy-website.yml
include/: ai_client.h  auris.h  cli.h  dataflow.h  enforcer.h  graph.h  inject.h  json_utils.h  logging.h  policy.h  profiler.h  syscall_table.h  trace_store.h  tracer.h
src/: ai_client.c  arm_regs.c  cli.c  dataflow.c  enforcer.c  graph.c  inject.c  inject_cli.c  json_utils.c  logging.c  main.c  pattern_match.c  policy.c  profiler.c  rop.c  sensitive_paths.c  shellcode.c  syscall_table.c  trace_store.c  tracer.c  utils.c
tests/: test_arm_regs.c  test_dataflow.c  test_graph.c  test_json_utils.c  test_main.c  test_pattern_match.c  test_policy.c  test_profiler.c  test_syscall_table.c  test_trace_store.c
tests/integration/: test_policy_enforce.sh  test_profile_compare.sh  test_trace_simple.sh
website/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: AnimatedTerminal.tsx  TerminalDemo.tsx  ThemeToggle.tsx
